# Markdown-Generator

./: README.md  mdconverter.py  pyproject.toml  setup.py  test.ipynb
css/: styles.css
markdown_generator/: mdconverter.py  mdconverter_class.py
mdconverter/: mdconverter_class.py
sample/: 05-GoogleGenerativeAI-(NEED-REVIEW).md  05-GoogleGenerativeAI-(WIKIDOCS).md  05-GoogleGenerativeAI.md  New-05-GoogleGenerativeAI.md  test.ipynb
sample/04-Model/: 06-GoogleGenerativeAI.ipynb
sample/docs/04-Model/: 06-GoogleGenerativeAI-(NEW).md  07-Huggingface-Endpoints-(NEW).md
sample/old_version/: 05-GoogleGenerativeAI-(NEED-REVIEW).md  05-GoogleGenerativeAI-(NEW).md  05-GoogleGenerativeAI-(WIKIDOCS).md
