[tool.poetry]
name = "markdown-generator"
version = "0.1.0"
description = ""
authors = [
    "sooyoung-wind <sooyoung.wind@gmail.com>",
    "teddylee777 <teddylee777@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
nbconvert = "^7.16.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
